fix spacing

--- a/style/craft.css
+++ b/style/craft.css
@@ -149,6 +149,7 @@ h1 {
         flex-direction: column;
         align-items: center;
         width: 90vw;
+        padding: 6px 12px;
     }
 
     .mcui-Crafting_Table > .mcui-arrow {
