--- a/style/interface.css
+++ b/style/interface.css
@@ -47,7 +47,6 @@ h2 {
     text-align: left;
     flex-direction: row;
     align-items: center;
-    font-size: 2rem;
     width: 32px;
     height: 32px;
     margin: 4px;
@@ -68,5 +67,15 @@ h2 {
 
     .infos span {
         font-size: 1.5rem;
+        margin: 0px 0px;
+    }
+
+    .infos h2 {
+        margin: 0px 0px;
+    }
+
+    .clear_btn:hover {
+        background: url('../images/cancel.webp') no-repeat center center / 24px 24px;
+        border-color: #b0b0b0 #6a6a6a #6a6a6a #b0b0b0;
     }
 }
